bug fix: add z-index

--- a/front/src/components/Header/Burger/styles.scss
+++ b/front/src/components/Header/Burger/styles.scss
@@ -25,6 +25,7 @@
         display: flex;
         flex-direction: column;
         position: absolute;
+        z-index: 1000;
         @include m767 () {
             display: none;
         }
